prevent weird footer spacing on large pages

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -1648,7 +1648,7 @@ text-align: right;
   position: absolute;
   top: 0;
   left: 0;
-  height: 120%;
+  height: 110%;
   width: 100%;
   z-index: -1;
   opacity: 0.2;
